--- a/templates/add_book.html
+++ b/templates/add_book.html
@@ -20,10 +20,15 @@
           <option value="{{ author.id }}">{{ author.name }}</option>
       {% endfor %}
     </select><br><br>
-    <label for="publication_year"> Year of Publication:</label>
-    <input type="date" id="publication_year" name="publication_year"><br><br>
+    <label for="publication_year"> Year of Publication:</label><input type="number"
+       name="publication_year"
+       min="0"
+       max="2100"
+       placeholder="e.g., 2025"
+       style="width: 200px; padding: 8px; font-size: 16px; border: 1px solid #aaa; border-radius: 6px;">
+<br><br>
     <label for="isbn">ISBN:</label>
-    <input type="number" id="isbn" name="isbn"><br><br>
+    <input type="text" name="isbn" required><br><br>
     <input type="submit" value="Add Book">
   </form><br>
   <a href="{{ url_for('home') }}">Back to Overview</a>
